--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
     <audio id="bgMusic" loop></audio>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 
-    <script src="http://www.turnjs.com/lib/turn.min.js"></script>
+    <script src="https://raw.githack.com/blasten/turn.js/master/turn.min.js"></script>
 
     <script src="script.js"></script>
 </body>
